# NetBBS

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
docs/: NetBBS-design-doc.md  NetBBS-disaster-recovery-drill.md  NetBBS-link-dogfood-plan.md  NetBBS-operator-guide.md  NetBBS-worklog.md
examples/: README.md  netbbs.rc  netbbs.service  netbbs_welcome_banner.ans  welcome_banner_ember.ans
scripts/: block_user.py  create_test_board.py  create_test_category.py  create_test_channel.py  create_test_file.py  create_test_file_area.py  create_test_user.py  link_quickstart_smoke_test.py  set_node_config.py  unblock_user.py
src/netbbs/: __init__.py  __main__.py  activity.py  attestation.py  backup.py  communities.py  config.py  directory.py  mail.py  search.py  selfupdate.py  timeutil.py  user_preferences.py
src/netbbs/admin/: __init__.py  __main__.py
src/netbbs/auth/: __init__.py  passwords.py  users.py
src/netbbs/boards/: __init__.py  boards.py  categories.py  content_id.py  limits.py  posts.py
src/netbbs/chat/: __init__.py  categories.py  channels.py  hub.py  mailbox.py  membership.py  moderation.py  nick.py  presence.py  scrollback.py  timestamps.py
src/netbbs/files/: __init__.py  areas.py  categories.py  entries.py  gc.py  storage.py
src/netbbs/identity/: __init__.py  addressing.py  encryption.py  keys.py
src/netbbs/link/: __init__.py  boards.py  channels.py  diagnostics.py  events.py  file_transfer.py  files.py  mail.py  node_identity.py  protocol.py  relay_mailbox.py  relay_selection.py  reliability.py  seedlist.py  store.py  sync.py  transport.py  work_items.py
src/netbbs/moderation/: __init__.py  blocklist.py  log.py  roles.py
src/netbbs/net/: __init__.py  admin_flow.py  ansi_editor.py  char_input.py  chat_flow.py  confirm.py  daybreak.py  editor_preference.py  file_flow.py  local_cli.py  local_terminal.py  login_flow.py  mail_flow.py  maintenance.py  nodeconfig.py  picker.py  prose_editor.py  session.py  session_registry.py  shutdown.py  ssh.py  telnet.py  throttle.py  web.py  welcome_banner.py  zmodem.py
src/netbbs/permissions/: __init__.py  levels.py
src/netbbs/rendering/: __init__.py  ansi.py  ansi_art.py  ansi_parse.py  menu.py  prose_buffer.py  reflow.py  sanitize.py  screen_buffer.py  theme.py
src/netbbs/storage/: __init__.py  database.py  execution.py  migrations.py
src/netbbs/web/: __init__.py
src/netbbs/web/static/: index.html  netbbs-terminal.js
tests/: conftest.py  link_harness.py  test_account_revocation_watcher.py  test_activity.py  test_admin_cli.py  test_admin_flow.py  test_ansi.py  test_ansi_art.py  test_ansi_editor.py  test_ansi_parse.py  test_attestation.py  test_auth.py  test_auth_timing.py  test_backup.py  test_blocklist.py  test_board_categories.py  test_board_pagination_ui.py  test_boards.py  test_channel_categories.py  test_channel_membership.py  test_channel_topic.py  test_channels.py  test_char_input.py  test_char_input_completion.py  test_char_input_history.py  test_char_input_line_editing.py  test_chat_action.py  test_chat_completion.py  test_chat_discovery.py  test_chat_dispatch.py  test_chat_flow_account_revalidation.py  test_chat_flow_away.py  test_chat_flow_cancellation.py  test_chat_flow_join.py  test_chat_flow_link.py  test_chat_flow_membership.py  test_chat_flow_moderation.py  test_chat_flow_nick.py  test_chat_flow_picker_authorization.py  test_chat_flow_private.py  (+112 more)
tests/fixtures/: link_canonical_vectors.json
