[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbbs"
version = "0.1.0"
description = "A modern, TCP/IP-native BBS with an ad-hoc mesh network (the Link)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
dependencies = [
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
