[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbbs"
version = "2.1.0"
description = "A modern, TCP/IP-native BBS with an ad-hoc mesh network (NetBBS Link)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
dependencies = [
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "asyncssh>=2.24",
    "aiohttp>=3.9",
]
# Fallback IANA timezone database for systems that don't ship one as part
# of the base OS. NetBSD's base system should have its own
# /usr/share/zoneinfo (verified this works via Python's zoneinfo module
# in a Linux sandbox; not yet confirmed on Thiesi's actual NetBSD
# machine specifically). Install this extra only if
# `netbbs.timeutil.is_valid_timezone` rejects known-good zone names like
# "Europe/Berlin" on your system.
tzdata = [
    "tzdata; sys_platform == 'win32' or sys_platform == 'unknown'",
]
# SSH connectivity (design doc round 21/22). Kept as a separate extra
# rather than a core dependency deliberately: asyncssh pulls in
# `cryptography`, which needs a Rust toolchain to build from source --
# exactly the friction PyNaCl was chosen to avoid for the core identity
# system (see this file's header comment / CLAUDE.md). A node that only
# wants Telnet never needs to install this at all; NetBSD pkgsrc ships a
# prebuilt `py-cryptography` binary for nodes that do want SSH, so no
# local Rust build is actually required in practice either way.
ssh = [
    "asyncssh>=2.24",
]
# Web (xterm.js) connectivity (design doc round 22/25). Also a separate
# extra, same "only pay for what you use" reasoning as ssh above -- a
# Telnet/SSH-only node doesn't need a web server stack pulled in.
# aiohttp itself has no Rust dependency (unlike the ssh extra's
# cryptography), so this is a lighter-weight opt-in than ssh is.
web = [
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"netbbs.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
